Clean up extraneous fields on model objects and add missing fields to swagger yaml file.
